# PyLibreHardwareMonitorLib

./: README.md  pyproject.toml
PyLibreHardwareMonitorLib/: __init__.py
